[package]
name = "rust-nes"
version = "0.1.0"
authors = ["caklimas <caklimas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
rand = "0.7.3"
sdl2 = { version = "*", features = ["bundled", "static-link"] }

[profile.release]
debug = true